Fixed Front Form Spacing

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -36,7 +36,8 @@ label
   font-size: 120%
 
 .searchform
-  max-width: max-content
+  // max-width: 31vw
+  width: 230px
   background-color: p.$platinum
   border-radius: 0
   border-color: p.$spanishgray
